--- a/recipe_finder/templates/index.html
+++ b/recipe_finder/templates/index.html
@@ -59,7 +59,7 @@
         <input type="text" id="query" name="query" required>
         <button type="submit">Search Recipes</button>
     </form>
-    <form method="get" action="/feeling_lucky">
+    <form method="post" action="/feeling_lucky">
         <button type="submit">I'm Feeling Lucky</button>
     </form>
 </body>
