--- a/recipe_finder/templates/results.html
+++ b/recipe_finder/templates/results.html
@@ -48,7 +48,7 @@
     </style>
 </head>
 <body>
-    <h2>Recipe Results</h2>
+    <h2>Recipe Results for '{{ search_term }}'</h2>
     <ul>
         {% for recipe in recipes %}
             <li>
